--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: neelfrost19/healthxfrontend:latest
+          tags: neelfrost19/teawebsite:latest
 
       - name: Trigger Render Deploy Workflow
         uses: peter-evans/repository-dispatch@v1
